# ProgressBar

./: .clang-format  .gitignore  .gitmodules  .goreleaser.yaml  .releaserc.json  CMakeLists.txt  Cargo.toml  README.md  Taskfile.yml  dagger.cue  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml  semver.yml
components/network/: CMakeLists.txt  backend.c  backend.h  components.mk  wifi.c  wifi.h
components/pn7160/: CMakeLists.txt  pn7160.c  pn7160.h  rw_ndef.c  rw_ndef.h  rw_ndef_mifare.c  rw_ndef_mifare.h
components/pn7161/: CMakeLists.txt  pn7161.c  pn7161.h
components/rust-progress-bar/: CMakeLists.txt  Cargo.toml  placeholder.c
components/rust-progress-bar/src/: lib.rs
components/wifi/: CMakeLists.txt  wifi.h
cue.mod/: .gitignore  module.cue
dagger/esp/: image.cue
hardware/: LICENSE.txt  README.md  fp-lib-table  progressbar-lib.kicad_sym  progressbar.kicad_pcb  progressbar.kicad_prl  progressbar.kicad_pro  progressbar.kicad_sch  sym-lib-table
hardware/progressbar-lib.pretty/: HVQFN40-6x6.kicad_mod
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  backend.h  component.mk  nci.c  nci.h  nfc.c  nfc.h  pn7160.c  pn7160.h  wifi.c  wifi.h
