[package]
name = "progress-bar"
version = "0.1.0"
authors = ["Marvin Drees <marvin.drees@9elements.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
