[package]
name = "rust-progress-bar"
version = "0.0.0"
authors = ["Marvin Drees <marvin.drees@9elements.com>", "Jonas Loeffelholz <jonas.loeffelholz@9elements.com>", "Maximilian Brune <maximilian.brune@9elements.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["native"] }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
